OmegaGo/tests/Core/OmegaGo.Client.Core.Tests/Sgf/Parsing/SampleSgfs/Invalid/;missing/5er, some var., ';' after '(' missing.sgf
(;SZ[5]C[123];B[bc]C[jo!];W[dc](;B[cd]C[eh!];W[cb])(B[cb];W[cd]C[neenee])(;B[cc];W[cb];B[bb];W[da]))